# parallel_cleaner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/benchmark_runs/: benchmark_results.json
benchmarks/: README.md  example_mpirun_commands.sh  make_synthetic_campaign.py  rebuild_benchmark_outputs.py  run_scaling.py  run_weak_scaling.py  scaling_job_change_cache_dir.sh  slurm_benchmark_dataset_matrix.sh  slurm_generate_campaign_matrix.sh  slurm_scaling_matrix_100k_1m.sh  slurm_strong_scaling_diagnostics.sh  slurm_weak_scaling_analysis.sh  submit_paper_analysis_jobs.sh  submit_paper_validation_job.sh  submit_parallel_analysis_jobs.sh
c_openmp/: Makefile  README.md  spike_kernel.c
configs/: README.md  default_config.json
configs/benchmark_campaigns/: default_campaign.json
data/: notes.txt
data/Acu_data_deposit/: decr.txt.md
examples/: README.md  make_example_assets.py  tiny_sensor_example.csv
reports/: README.md  make_mpi_diagnostics_figures.py  make_parallel_scaling_figures.py  paper.aux  paper.out  paper.tex  references.bib
src/: README.md
src/ncdt_cleaner/: README.md  __init__.py  _mpi.py  behavior.py  benchmarks.py  cache.py  characterize.py  cleaning.py  cli.py  config.py  inspectors.py  lvm.py  models.py  mpi_modes.py  normalization.py  plotting.py  schema.py  (+7 more)
src/ncdt_cleaner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  run_smoke_tests.py  test_behavior_summary.py  test_cli_serial_integration.py  test_lvm_support.py  test_packaging_metadata.py  test_synthetic_campaign_generator.py
(+108 files in other folders)
